test/error/lex/unclosedQuotes.tig
let
in
	printf("Hello wolr)
end
